# parser_hh_sj

./: .gitignore  README.md  pyproject.toml  run.py  vacancies.json
config/: config.py
parser_hh_superjob/: command_handler.py  mixin_working_data.py
parser_hh_superjob/JSON_saver/: json_saver.py
parser_hh_superjob/api_platforms/: hh_api.py  mixin_api.py  platform_api.py  superjob_api.py
parser_hh_superjob/api_platforms/models/: __init__.py  hh_model.py  mixin_check_salary.py  platform_model.py  superjob_model.py
parser_hh_superjob/exceptions/: my_exceptions.py
tests/: test_command_handler.py  test_hh_api.py  test_mixin_worjing_data.py  test_mixin_working_data.py  test_sj_api.py
