[tool.poetry]
name = "parser-hh-superjob"
version = "0.1.0"
description = ""
authors = ["iko4akov <iko4akov@gmail.com>"]
readme = "README.md"
packages = [{include = "parser_hh_superjob"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
